--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <module>abstractfactory</module>
     <module>builder</module>
     <module>factorymethod</module>
+    <module>prototype</module>
   </modules>
 
   <dependencies>
