--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <module>builder</module>
     <module>factorymethod</module>
     <module>prototype</module>
+    <module>singleton</module>
   </modules>
 
   <dependencies>
