--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <module>factorymethod</module>
     <module>prototype</module>
     <module>singleton</module>
+    <module>adapter</module>
   </modules>
 
   <dependencies>
