--- a/singleton/pom.xml
+++ b/singleton/pom.xml
@@ -7,9 +7,8 @@
     <artifactId>dp-root</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-  <version>${project.version}</version>
-  <package>jar</package>
-  <name>singleton</name>
+  <packaging>jar</packaging>
+  <artifactId>singleton</artifactId>
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
