--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <module>prototype</module>
     <module>singleton</module>
     <module>adapter</module>
+     <module>bridge</module>
   </modules>
 
   <dependencies>
