--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <module>singleton</module>
     <module>adapter</module>
      <module>bridge</module>
+     <module>composite</module>
   </modules>
 
   <dependencies>
