--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
     <module>adapter</module>
      <module>bridge</module>
      <module>composite</module>
+      <module>decorator</module>
+<module>facade</module>
   </modules>
 
   <dependencies>
