--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
      <module>composite</module>
       <module>decorator</module>
 <module>facade</module>
+<module>flyweight</module>
   </modules>
 
   <dependencies>
